add role based auth & handling of registration cases
